# VerIH

./: README.md
Eval/: .gitignore  LICENSE  requirements.txt  run.slurm  run_general.sh  run_safety.sh
Eval/evals/: read.sh  run_vllm.sh
Eval/evals/ifbench/: read.sh
Eval/evals/ifeval/: read.sh
Eval/evals/iheval/: evaluate.py  run_vllm.sh
Eval/evals/math/: evaluate.py  run_vllm.sh
Eval/torchllms/: .gitignore  README.md  pyproject.toml
Eval/torchllms/scripts/realguardrails/: dpo.sh  sft.sh  sft_role.sh  simpo.sh
Eval/torchllms/torchllms/: __init__.py  distributed.py
Eval/torchllms/torchllms/inference/: __init__.py  chat.py  chat_huggingface.py  generate.py  llm.py  llm_cfg.py  logit_processors.py  providers.py  test_llm.py  utils.py
Eval/torchllms/torchllms/messages/: __init__.py  test_tokenization.py  tokenization.py
Eval/torchllms/torchllms/messages/configs/: llama3_instruct.jinja  llama3_instruct.json  llama3_instruct.yaml  olmo2_instruct.jinja  olmo2_instruct.json  olmo2_instruct.yaml  qwen2.5_instruct.jinja  qwen2.5_instruct.json  qwen2.5_instruct.yaml
Eval/torchllms/torchllms/models/: __init__.py  cache.py  checkpoint_converter.py  lora.py  networks.py  networks_olmo.py  test_lora.py  utils.py
Eval/torchllms/torchllms/training/: __init__.py  arguments.py  data.py  losses.py  optim.py  utils.py
Eval/torchllms/torchllms/training/trainers/: TRAINERS.md  dpo.py  sft.py  simpo.py
RLVR/: .gitignore  requirements.txt  run.sh
RLVR/dataset/: generate_verih.py  llm.py  make_parquet.py
RLVR/docs/: conf.py
RLVR/scripts/: train_grpo.sh
(+42 files in other folders)
